--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -101,16 +101,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncKeyedLock" Version="7.1.6" />
-    <PackageReference Include="AWSSDK.Core" Version="3.7.402.45" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.416.15" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.7.400.139" />
+    <PackageReference Include="AWSSDK.Core" Version="4.0.0.2" />
+    <PackageReference Include="AWSSDK.S3" Version="4.0.0.1" />
+    <PackageReference Include="AWSSDK.SQS" Version="4.0.0.1" />
     <PackageReference Include="Azure.Core" Version="1.45.0" />
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
-    <PackageReference Include="MailKit" Version="4.11.0" />
+    <PackageReference Include="MailKit" Version="4.12.0" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.4" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.4" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.71.1" />
@@ -132,6 +132,7 @@
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="SerilogTimings" Version="3.1.0" />
     <PackageReference Include="System.Buffers" Version="4.6.1" />
+    <PackageReference Include="System.Collections.Immutable" Version="9.0.4" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.4" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
@@ -143,6 +144,7 @@
     <PackageReference Include="System.Memory" Version="4.6.3" />
     <PackageReference Include="System.Memory.Data" Version="9.0.4" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.6.1" />
+    <PackageReference Include="System.Reflection.Metadata" Version="9.0.4" />
     <PackageReference Include="System.Runtime.Caching" Version="9.0.4" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
     <PackageReference Include="System.Security.AccessControl" Version="6.0.1" />
