Improve job change detection
Detect if there is a change in schedules.  Job collection is skipped if jobs haven't been modified since the last collection and we have collected within the last 24hrs.  Previously this just checked the date_modified on sysjobs which doesn't detect schedule changes.

--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -63,6 +63,7 @@
 	<EmbeddedResource Include="SQL\SQLInstance.sql" />
 	<EmbeddedResource Include="SQL\SQLIOStats.sql" />
 	<EmbeddedResource Include="SQL\SQLJobHistory.sql" />
+	<EmbeddedResource Include="SQL\SQLMaxJobLastModified.sql" />
 	<EmbeddedResource Include="SQL\SQLJobs.sql" />
 	<EmbeddedResource Include="SQL\SQLJobSteps.sql" />
 	<EmbeddedResource Include="SQL\SQLLastGoodCheckDB.sql" />
