--- a/DBADashServiceConfig/ServiceConfigTool.csproj
+++ b/DBADashServiceConfig/ServiceConfigTool.csproj
@@ -84,6 +84,7 @@
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.5" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.11.0" />
     <PackageReference Include="System.IO.Packaging" Version="9.0.5" />
+    <PackageReference Include="System.Management.Automation" Version="7.4.10" />
     <PackageReference Include="System.Memory" Version="4.6.3" />
     <PackageReference Include="System.Memory.Data" Version="9.0.5" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.6.1" />
