GitHub action fix
Improve workflow reliability by shutting down service before running Pester tests. The test would occasionally fail due to the delete test, with the service still collecting data for the instance we are trying to delete.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,9 @@ jobs:
         run: | 
           "Wait 5min"
           Start-Sleep -s 300
-
+      - name: Stop services
+        run: |
+          net stop DBADashService
       - name: Output CollectionErrorLog
         shell: powershell
         run: | 
