Service Config - Performance Counter Selection
Allow performance counters to be modified in the service config tool.  Make it easier for users to customize performance counters.

--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -30,12 +30,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\GlobalAssemblyInfo.cs" Link="Properties\GlobalAssemblyInfo.cs" />
+    <EmbeddedResource Include="SQL\SQLAvailableCounters.sql" />
     <EmbeddedResource Include="SQL\SQLAvailableProcs.sql" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="PerformanceCounters.xml">
+    <EmbeddedResource Include="PerformanceCounters.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </EmbeddedResource>
     <EmbeddedResource Include="SQL\SQLAvailabilityReplicas.sql" />
 	<EmbeddedResource Include="SQL\SQLAzureDBResourceGovernance.sql" />
 	<EmbeddedResource Include="SQL\SQLAgentJobs.sql" />
