--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   scan:
     name: Security Scanning
-    runs-on: windows-2019
+    runs-on: windows-latest
 
     strategy:
       fail-fast: false
