Forced Plans tab - Add links
Add links to query store on forced plans tab.  e.g. Click Query Id, Plan Id etc to quickly check on the performance of forced query plans.

x

x

Update QueryStoreForcedPlans.cs

Update QueryStoreViewer.cs

--- a/DBADashGUI/DBADashGUI.csproj
+++ b/DBADashGUI/DBADashGUI.csproj
@@ -242,6 +242,7 @@
     <ProjectReference Include="..\DBADash\DBADash.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AsyncKeyedLock" Version="7.1.8" />
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="DiffPlex" Version="1.9.0" />
