--- a/DBADashConfig/Properties/launchSettings.json
+++ b/DBADashConfig/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DBADashConfig": {
       "commandName": "Project",
-      "commandLineArgs": "-a List"
+      "commandLineArgs": "-a SetAWS --AWSProfile \"Test\""
     }
   }
 }
