Add SQL 2025 to workflow matrix
Update mssqlsuite to v1.12.
Add 2025 to the workflow matrix so we have automated testing for SQL 2025.
Fix Typo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         language: [csharp]
-        sql-version: [2016, 2017, 2019, 2022]
+        sql-version: [2016, 2017, 2019, 2022, 2025]
         sql-collation: [Latin1_General_BIN]
 
     steps:
@@ -68,7 +68,7 @@ jobs:
           Compress-Archive -Path "DBADashBuild\DBADashGUIOnly\*" -DestinationPath $guiZipPath
 
       - name: Install SQL Server ${{ matrix.sql-version }}
-        uses: potatoqualitee/mssqlsuite@v1.11
+        uses: potatoqualitee/mssqlsuite@v1.12
         with:
           install: sqlengine
           version: ${{ matrix.sql-version }}
