Resource Governor Resource Pools - UI
Add resource governor pools control. Replace workload groups analysis tab with Resource Governor tab - which has tabs for pools & workload groups.

--- a/DBADashGUI/DBADashGUI.csproj
+++ b/DBADashGUI/DBADashGUI.csproj
@@ -95,6 +95,9 @@
     <Compile Update="Performance\MemoryUsage.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Update="Performance\ResourceGovernorResourcePools.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
